json-form/src/JsonEditor.scss
/*
 * Copyright 2018 The Diesel Authors
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

// Carbon theme
@import '~carbon-components/scss/globals/scss/vendor/@carbon/elements/scss/themes/theme-maps';
$carbon--theme: $carbon--theme--g10;
@import '~carbon-components/scss/globals/scss/typography';
@import '~carbon-components/scss/components/button/button';
@import '~carbon-components/scss/components/text-input/text-input';
@import '~carbon-components/scss/components/tooltip/tooltip';
@import '~carbon-components/scss/components/checkbox/checkbox';
@import '~carbon-components/scss/components/tag/tag';
@import '~carbon-components/scss/components/combo-box/combo-box';
@import '~carbon-components/scss/components/date-picker/date-picker';
@import '~carbon-components/scss/components/time-picker/time-picker';
@import '~carbon-components/scss/components/select/select';

.diesel-json-editor {
  position: relative;
  height: 100%;

  .diesel-json-editor-scrollpane {
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    overflow: auto;
  }

  .errors {
    color: darkred;
  }

  table {
    border-spacing: 0;
  }

  td,
  table,
  th {
    padding: 0;
    margin: 0;
    border: none;
  }

  th {
    text-align: left;
    font-weight: 800;
  }

  .doc-root {
    display: flex;
    flex-direction: row;
    align-items: center;

    em {
      flex-grow: 1;
    }
  }

  #dummy-textarea,
  #dummy-textarea:focus {
    height: 0;
    width: 0;
    position: absolute;
    top: -1000px;
  }

  .empty-obj,
  .js-null {
    height: 40px;
    display: flex;
    align-items: center;
    font-style: italic;
  }

  .js-null {
    &.form-error {
      border: 2px solid #da1e28;
    }

    border: 2px solid transparent;
  }

  .value {
    .checkbox-wrapper {
      margin-top: 8px;
    }
  }

  .form-errors {
    color: #da1e28;
    font-size: 0.75rem;
    padding-top: 8px;
  }

  .add-prop-form {
    border: 1px solid lightgray;
    padding: 8px;
    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);

    .bx--text-input {
      min-width: 330px;
    }

    .buttons-row {
      padding-top: 1rem;
      display: flex;
      flex-direction: row;

      .spacer {
        flex-grow: 1;
      }
    }

    .prop-name-proposals {
      margin-top: 16px;
      margin-bottom: 8px;

      .proposals-header-row {
        display: flex;
        flex-direction: row;
        align-items: center;

        & > span {
          padding-left: 8px;
        }
      }

      .proposal-tags {
        display: flex;
        flex-direction: row;
        flex-wrap: wrap;
        margin-top: 8px;
      }

      .bx--tag {
        margin: 0 8px 0 0;

        &.bx--tag--interactive {
          background-color: #d0e2ff;
          color: #002d9c;

          &:hover {
            cursor: pointer;
            background-color: #a6c8ff;
          }
        }
      }
    }
  }

  .jv-object {
    .object-prop {
      .prop-name-row {
        display: flex;
        flex-direction: row;
        align-items: center;

        height: 36px;

        .prop-name {
          flex-grow: 1;
        }
      }

      .prop-value {
        padding-left: 32px;
      }
    }

    .add-prop-row {
    }
  }

  .jv-array {
    .array-elem-head {
      display: flex;
      flex-direction: row;
      align-items: center;
      height: 40px;

      .elem-name {
        flex-grow: 1;
      }
    }

    .elem-value {
      padding-left: 32px;
    }
  }

  .bx--date-picker {
    width: 100%;

    .bx--date-picker-container {
      width: 100%;

      .bx--date-picker__input.flatpickr-input {
        width: 100%;
      }
    }
  }

  .time-picker {
    display: flex;
    width: 100%;

    .bx--time-picker__input {
      flex-grow: 1;

      .bx--text-input.time-picker {
        //text-align: right;
      }
    }

    .bx--select-input {
      margin-left: 8px;
      height: 2.3rem;
    }
  }
}

.diesel-json-editor-menu {
  .tm {
    background-color: white;
    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);

    .tm-item {
      padding: 0.2rem 0.5rem;
      display: flex;
      flex-direction: row;
      align-items: center;

      .tm-item__content {
        flex-grow: 1;
        white-space: nowrap;
      }

      &.tm-active {
        background-color: $hover-ui;
      }

      .tm-item__submenu {
        margin-left: 0.3rem;
      }
    }

    .tm-separator {
      height: 0;
      border-bottom: solid lightgrey 1px;
      width: 100%;
      margin-top: 0.2rem;
      margin-bottom: 0.2rem;
    }

    .menu-item {
      height: 20px;
      display: flex;
      align-items: center;

      &:hover {
        cursor: pointer;
      }

      .item-icon {
        color: gray; // TODO
        margin-right: 8px;
        height: 100%;
        width: 18px;
        display: flex;
        align-items: center;
      }
    }
  }
}

